2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config_stream):
	don't setup the video bits if we don't have a video output
	* src/totem-properties-main.c:
	* src/totem-properties-view.c:
	(totem_properties_view_register_type),
	(totem_properties_view_class_init), (on_got_metadata_event),
	(totem_properties_view_init), (totem_properties_view_finalize),
	(totem_properties_view_set_location):
	Fix the properties page, this one will actually work (if you don't
	use GStreamer)

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* Makefile.am:
	* data/Makefile.am:
	* src/Makefile.am:
	  Fix make distcheck.

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* src/metadata-test.c: (main): we don't use translations in there
	it's a test tool

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* src/Makefile.am:
	* src/totem-properties-main.c:
	(totem_properties_plugin_register_type),
	(property_page_provider_iface_init), (totem_properties_get_pages),
	(nautilus_module_initialize), (nautilus_module_shutdown),
	(nautilus_module_list_types):
	* src/totem-properties-page.c:
	* src/totem-properties-view.c: (totem_properties_view_get_type),
	(totem_properties_view_register_type),
	(totem_properties_view_class_init), (on_got_metadata_event),
	(totem_properties_view_init), (totem_properties_view_destroy),
	(totem_properties_view_new), (totem_properties_view_set_location):
	* src/totem-properties-view.h:
	Port the properties page to the non-bonobo nautilus interface
	(Closes: #162850)

2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: remove unused keys_DATA

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
	(group_switch), (bacon_video_widget_open),
	(bacon_video_widget_new):
	  Use suburi property for subtitles. Use group-switch to clean
	  metadata cache.
